this is version2

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <h1>This is a Design Version V8</h1>
-    <p>Welcome to Terraform Tutorials</p>
+    <h1>This is a Design Version </h1>
 </body>
-
+<h1>this is v2 of index.html</h1> 
+</body>
 </html>git
